test: v1 coverage for model, dao, web, integration, context, gateway
- model: 27 new tests (PageResult, BaseEntity, SfAgentShadowConfig,
  TenantEnvironmentConfig, Notification, ObservabilitySpan/Trace)
- dao: fix NotificationMapperTest tenantId setup + 20 tests passing
- web: 102 tests total (config, controller, SSE, service, websocket)
- integration: 249 tests total (Git, Jenkins, MCP, tool execution)
- context: 8 new tests (ChunkingConfig, TextChunk, MyBatisPlusConfig)
- gateway: 3 new tests (GatewayConfig, JwtAuthFilter)